--- a/tutorselectionsystem/src/main/resources/application.properties
+++ b/tutorselectionsystem/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/jpatest?createDatabaseIfNotExist=true\
   &serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ########## jpa ##########
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
