--- a/tutorselectionsystem/src/main/resources/application.properties
+++ b/tutorselectionsystem/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ########## datasource ##########
-spring.datasource.url=jdbc:mysql://localhost:3306/jpatest?createDatabaseIfNotExist=true\
+spring.datasource.url=jdbc:mysql://localhost:3306/tutorselectionsystemDB?createDatabaseIfNotExist=true\
   &serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=123456
