进一步开发

--- a/tutorselectionsystem/src/main/resources/application.properties
+++ b/tutorselectionsystem/src/main/resources/application.properties
@@ -13,3 +13,9 @@ logging.level.root=warn
 logging.level.com.example=debug
 # 时间；日志级别；类；方法；行(行不能使用圆括号)
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %C.%M[%line] - %msg%n
+### jackson ###
+spring.jackson.default-property-inclusion=non_null
+
+# 密钥和盐值
+my.secretkey=R28K42ZEJ8LWRHU5
+my.salt=636eac2534bcfcb0
