基本后端完成

--- a/tutorselectionsystem/src/main/resources/application.properties
+++ b/tutorselectionsystem/src/main/resources/application.properties
@@ -15,7 +15,11 @@ logging.level.com.example=debug
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %C.%M[%line] - %msg%n
 ### jackson ###
 spring.jackson.default-property-inclusion=non_null
-
 # 密钥和盐值
+# 盐值必须是16位的16进制的
 my.secretkey=R28K42ZEJ8LWRHU5
 my.salt=636eac2534bcfcb0
+# 后端返给前端判别后的角色信息，然后由前端依据这个信息根据不同角色渲染不同页面
+my.student=bb63e5f7e0f2ffae845c
+my.teacher=6983f953b49c88210cb9
+my.admin=6983f953b49c88210cb9
